--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,18 +8,26 @@
     android:padding="16dp"
     tools:context="com.annapol04.munchkin.gui.MainActivity">
 
-    <Button
-        android:layout_width="wrap_content"
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textStyle="italic"
+        android:textColor="#5D4037"
+        android:textSize="80sp"
+        android:text="Munchkin"
+        android:gravity="center"
+        android:padding="16dp" />
+
+    <ImageButton
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:scaleType="fitXY"
+        android:layout_gravity="center_horizontal"
+        android:background="@android:color/transparent"
         android:text="Start"
         android:textAllCaps="true"
+        android:src="@drawable/ic_play_circle_outline_black_48dp"
+        android:tint="#3E2723"
         android:onClick="start" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Highscore"
-        android:textAllCaps="true"
-        android:onClick="goToHighscore" />
 
 </LinearLayout>
