--- a/app/src/main/res/layout/zoom_layout.xml
+++ b/app/src/main/res/layout/zoom_layout.xml
@@ -10,7 +10,7 @@
         android:src="@drawable/gazebo" />
 
     <Button
-        android:id="@+id/zoom_button"
+        android:id="@+id/move_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="start"
