--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
+    android:padding="8dp"
+    android:background="#EFEBE9"
     tools:context="com.annapol04.munchkin.gui.MainActivity">
 
-    <Button
-        android:layout_width="wrap_content"
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Start"
-        android:textAllCaps="true"
+        android:text="Munchkin"
+        android:textStyle="italic"
+        android:gravity="center"
+        android:textSize="80sp"
+        android:textColor="#795548"
+        android:padding="16dp"
+        />
+    <ImageButton
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:src="@drawable/ic_play_circle_outline_black_48dp"
+        android:layout_gravity="center_horizontal"
+        android:background="@android:color/transparent"
+        android:tint="#3E2723"
+        android:padding="16dp"
         android:onClick="start" />
 
 </LinearLayout>
